# delta-embed-vl

./: .gitignore  README.md  config.toml  optimize.md  prep-data.md  prep_results.tsv  pyproject.toml
scripts/: check_dataloader.py  check_student.py  check_tdataloader.py  check_teacher.py  optimize_teacher.py  start_native_teacher.py  start_teacher.py  test_pipeline.py  test_pooling.py
src/delta_embed/: settings.py
src/delta_embed/data/: dataloader.py
src/delta_embed/eval/: mteb_eval.py
src/delta_embed/teacher/: generate.py
src/delta_embed/training/: distill.py  losses.py
src/delta_embed_vl/: __init__.py  artifacts.py  eval.py  main.py  prepare.py  progress.py  settings.py  train.py
src/delta_embed_vl/data/: build.py  dataloader.py  dataset.py  download.py  media.py  prepare.py  preprocess.py  sources.py  tdataloader.py  tdataset.py  teacher.py
src/delta_embed_vl/eval/: mteb_eval.py
src/delta_embed_vl/evals/: docci_eval.py  encoder.py  image_cache.py  msrvtt_eval.py  mteb_eval.py  retrieval.py  table.py  textcaps_eval.py  types.py  vidore_eval.py
src/delta_embed_vl/model/: embedding_inputs.py  pooling.py  student.py  teacher.py  tokenization.py
src/delta_embed_vl/teacher/: audit.py  generate.py
src/delta_embed_vl/training/: distill.py
